// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders badge 1`] = `
<Text
  collapsable={false}
  numberOfLines={1}
  style={
    Object {
      "alignSelf": "flex-end",
      "backgroundColor": "rgba(179, 38, 30, 1)",
      "borderRadius": 10,
      "color": "rgba(255, 255, 255, 1)",
      "fontSize": 10,
      "height": 20,
      "lineHeight": 20,
      "minWidth": 20,
      "opacity": 1,
      "overflow": "hidden",
      "paddingHorizontal": 3,
      "textAlign": "center",
      "textAlignVertical": "center",
    }
  }
/>
`;

exports[`renders badge as hidden 1`] = `
<Text
  collapsable={false}
  numberOfLines={1}
  style={
    Object {
      "alignSelf": "flex-end",
      "backgroundColor": "rgba(179, 38, 30, 1)",
      "borderRadius": 6,
      "color": "rgba(255, 255, 255, 1)",
      "fontSize": 6,
      "height": 12,
      "lineHeight": 12,
      "minWidth": 12,
      "opacity": 0,
      "overflow": "hidden",
      "paddingHorizontal": 3,
      "textAlign": "center",
      "textAlignVertical": "center",
    }
  }
>
  3
</Text>
`;

exports[`renders badge in different color 1`] = `
<Text
  collapsable={false}
  numberOfLines={1}
  style={
    Object {
      "alignSelf": "flex-end",
      "backgroundColor": "#f44336",
      "borderRadius": 10,
      "color": "rgba(255, 255, 255, 1)",
      "fontSize": 10,
      "height": 20,
      "lineHeight": 20,
      "minWidth": 20,
      "opacity": 1,
      "overflow": "hidden",
      "paddingHorizontal": 3,
      "textAlign": "center",
      "textAlignVertical": "center",
    }
  }
>
  3
</Text>
`;

exports[`renders badge in different size 1`] = `
<Text
  collapsable={false}
  numberOfLines={1}
  style={
    Object {
      "alignSelf": "flex-end",
      "backgroundColor": "rgba(179, 38, 30, 1)",
      "borderRadius": 6,
      "color": "rgba(255, 255, 255, 1)",
      "fontSize": 6,
      "height": 12,
      "lineHeight": 12,
      "minWidth": 12,
      "opacity": 1,
      "overflow": "hidden",
      "paddingHorizontal": 3,
      "textAlign": "center",
      "textAlignVertical": "center",
    }
  }
>
  3
</Text>
`;

exports[`renders badge with content 1`] = `
<Text
  collapsable={false}
  numberOfLines={1}
  style={
    Object {
      "alignSelf": "flex-end",
      "backgroundColor": "rgba(179, 38, 30, 1)",
      "borderRadius": 10,
      "color": "rgba(255, 255, 255, 1)",
      "fontSize": 10,
      "height": 20,
      "lineHeight": 20,
      "minWidth": 20,
      "opacity": 1,
      "overflow": "hidden",
      "paddingHorizontal": 3,
      "textAlign": "center",
      "textAlignVertical": "center",
    }
  }
>
  3
</Text>
`;
